--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ matrix:
     - go: tip
 
 script:
-  - go test -v . ./sling
+  - go test -v ./...
   - go build
   - diff -u <(echo -n) <(gofmt -d -s .)
   - if [ -z $NOVET ]; then
