--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,11 @@ matrix:
     - go: tip
   allow_failures:
     - go: tip
-before_script:
-  - go get github.com/mattn/goveralls
 script:
-  - $HOME/gopath/bin/goveralls -service=travis-ci
-#  - go test -v -covermode=count -coverprofile=coverage.out
-#  - go build
+  - go test -v -covermode=atomic -coverprofile=coverage.out
   - diff -u <(echo -n) <(gofmt -d -s .)
   - if [ -z $NOVET ]; then
       diff -u <(echo -n) <(go tool vet . 2>&1 | grep -vE 'ExampleCommand|bash_completions.*Fprint');
     fi
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
