--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
   - go test -v -covermode=atomic -coverprofile=coverage.out
   - diff -u <(echo -n) <(gofmt -d -s .)
   - if [ -z $NOVET ]; then
-      diff -u <(echo -n) <(go tool vet . 2>&1 | grep -vE 'ExampleCommand|bash_completions.*Fprint');
+      diff -u <(echo -n) <(go vet . 2>&1 | grep -vE 'ExampleCommand|bash_completions.*Fprint');
     fi
 after_success:
   - bash <(curl -s https://codecov.io/bash)
