Update layouts for just-the-docs theme

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,6 +6,7 @@ twitter_username: vonagedev
 
 # Build settings
 remote_theme: pmarsceill/just-the-docs
+theme: "just-the-docs"
 plugins:
   - jekyll-feed
 
