--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,6 +7,7 @@ twitter_username: vonagedev
 # Build settings
 remote_theme: pmarsceill/just-the-docs
 theme: "just-the-docs"
+baseurl: "/vonage-go-sdk"
 plugins:
   - jekyll-feed
 
